--- a/app/views/requests/_new_position_buttons.html.erb
+++ b/app/views/requests/_new_position_buttons.html.erb
@@ -1,6 +1,6 @@
 <div class="container">
   <div class="btn-group btn-group-justified" role="group">
-    <%= link_to(t('buttons.describe'), '#', class: 'btn btn-primary describe') %>
+    <%= link_to(t('buttons.describe'), new_request_path(type: @request.type), class: 'btn btn-primary describe') %>
     <%= link_to(t('buttons.cancel'), '#', class: 'btn btn-default cancel') %>
   </div>
 </div>
