--- a/app/views/requests/_new.html.erb
+++ b/app/views/requests/_new.html.erb
@@ -40,7 +40,7 @@
         <div class="form-group">
           <%= f.label(:media, Request.human_attribute_name(:media), class: 'col-md-2 control-label') %>
           <div class="col-md-10">
-            <%= f.file_field(:media, multiple: false, class: '') %>
+            <%= f.file_field(:media, multiple: false, accept: 'image/png,image/jpeg') %>
             <span class="help-block"><span class="text-danger"><%= t('.hint.max_file_size') %></span></span>
           </div>
         </div>
