Job-Liste, Detail-Ansicht

--- a/app/assets/stylesheets/bootstrap_and_override.sass
+++ b/app/assets/stylesheets/bootstrap_and_override.sass
@@ -3,13 +3,25 @@ $screen-sm-min: 610px
 @import "bootstrap-sprockets"
 @import "bootstrap"
 
+a,
+a:hover,
+a:focus
+  color: inherit
+
 h4,
 .h4
   font-size: $font-size-h4 - 2
   font-weight: bold
 
+h5,
+.h5
+  font-weight: bold
+
 .modal-header .glyphicon
   padding-right: 0.5em
+
+.panel-body.list-group
+  padding: 0
 
 nav
   //&.navbar-fixed-top
