--- a/app/views/jobs/_index.html.erb
+++ b/app/views/jobs/_index.html.erb
@@ -5,14 +5,23 @@
       <span class="badge pull-right"><span class="glyphicon glyphicon-refresh" aria-hidden="true"></span></span>
     </div>
     <% if @jobs.present? -%>
-      <div class="list-group">
+      <div class="list-group" data-update-url="<%= url_for(jobs_path) %>">
         <% @jobs.each do |job| -%>
-          <%= link_to(request_path(job.id), remote: true, method: :get, class: 'list-group-item') do %>
-            <%= image_tag(image_path(job.icon_list), alt: "#{ job.service.type }, #{ job.extended_attributes.detailed_status }") %>
-            #<%= job.id %>: <%= job.title %>
-            <%= mark_photo_required(job) %>
-            <%= mark_trust(job) %>
+          <%= link_to(request_path(job.id), remote: true, method: :get, class: 'list-group-item', 'data-job-id': job.id) do %>
+            <span class="h5 list-group-item-heading">
+              <%= image_tag(image_path(job.icon_list), alt: "#{ job.service.type }, #{ job.extended_attributes.detailed_status }") %>
+              #<%= job.id %>
+              <%= mark_photo_required(job) %>
+              <%= mark_trust(job) %>
+            </span>
+            <span class="badge sort-handle">
+              <span class="glyphicon glyphicon-arrow-up" aria-hidden="true"></span>
+              <span class="glyphicon glyphicon-arrow-down" aria-hidden="true"></span>
+            </span>
             <span class="badge"><span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span></span>
+            <h5 class="list-group-item-text">
+              <%= job.title %>
+            </h5>
           <% end %>
         <% end -%>
       </div>
