--- a/app/views/requests/_index.html.erb
+++ b/app/views/requests/_index.html.erb
@@ -1,6 +1,6 @@
 <div class="requests">
   <div class="panel panel-default">
-    <div class="panel-heading clickable" data-target="<%= url_for(session[:list]) %>">
+    <div class="panel-heading clickable" data-target="<%= url_for(session[:referer_params]) %>">
       <%= t('.title') %>
       <span class="badge pull-right"><span class="glyphicon glyphicon-refresh" aria-hidden="true"></span></span>
     </div>
