Änderung Icon laut Redmine-Ticket #453.

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -65,7 +65,7 @@
             </li>
             <li>
               <%= link_to(map_path(type: :jobs), remote: true, class: :map, title: t("nav.job_map")) do %>
-                  <span class="glyphicon glyphicon-star-empty" aria-hidden="true"></span>
+                  <span class="glyphicon glyphicon-pushpin" aria-hidden="true"></span>
                   <span class="hidden-sm hidden-md"><%= t("nav.job_map") %></span>
               <% end %>
             </li>
